# Rust-IC-hot-not-assignment

./: Cargo.toml  Makefile  README.md  dfx.json  package-lock.json  package.json
src/todo_ic_backend/: Cargo.toml  todo_ic_backend.did
src/todo_ic_backend/src/: lib.rs  service.rs  storage.rs  types.rs
src/todo_ic_backend/tests/: integration_test.rs
src/todo_ic_frontend/: Cargo.toml  Trunk.toml  build.rs  index.html  package.json
src/todo_ic_frontend/src/: App.js  app.rs  ic_client.rs  lib.rs  main.rs  types.rs
src/todo_ic_frontend/src/components/: mod.rs  network_selector.rs  todo_form.rs  todo_list.rs
src/todo_ic_frontend/style/: main.css
