[package]
name = "todo_ic_backend"
version = "0.1.0"
edition = "2021"


[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.13"
ic-stable-structures = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
proptest = "1.0"
tokio = { version = "1.0", features = ["full"] }

[[test]]
name = "integration_tests"
path = "tests/integration_test.rs"
