[package]
name = "todo_ic_frontend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
leptos = { version = "0.6", features = ["csr", "nightly"] }
leptos_meta = { version = "0.6", features = ["csr"] }
leptos_router = { version = "0.6", features = ["csr"] }
console_error_panic_hook = "0.1"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
  "console",
  "Window",
  "Document",
  "Element",
  "HtmlElement",
  "HtmlInputElement",
  "HtmlButtonElement",
  "Event",
  "EventTarget",
  "Storage",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ic-agent = "0.32"
candid = "0.10"
js-sys = "0.3"